# ZeroMQ-RFC-Implementation

./: CMakeLists.txt  README.md  define.hpp
10.FLP-Freelance Protocol/: CMakeLists.txt  config.json  flp_constant.hpp
10.FLP-Freelance Protocol/client/: flcliapi.cpp  flcliapi.hpp  main.cpp
10.FLP-Freelance Protocol/server/: flserver.cpp  flserver.hpp  main.cpp
12.CHP-Clustered Hashmap Protocol/: CMakeLists.txt  kvmsg.cpp  kvmsg.hpp
12.CHP-Clustered Hashmap Protocol/server/: clonesrv.cpp  clonesrv.hpp  main.cpp
12.CHP-Clustered Hashmap Protocol/test/: test_kvmsg.cpp
6.PPP-Paranoid Pirate Protocol/: CMakeLists.txt  config.json  constant.hpp  paranoid_pirate_broker.cpp  paranoid_pirate_broker.hpp  paranoid_pirate_proxy.cpp  paranoid_pirate_proxy.hpp  ppbroker.cpp  ppproxy.cpp  ppqueue.cpp  run.bat  worker_queue.cpp  worker_queue.hpp
6.PPP-Paranoid Pirate Protocol/broker/: main.cpp  ppbroker.cpp  ppbroker.hpp  worker_queue.cpp  worker_queue.hpp
6.PPP-Paranoid Pirate Protocol/client/: lpclient.cpp  lpclient.hpp  main.cpp
6.PPP-Paranoid Pirate Protocol/worker/: main.cpp  ppworker.cpp  ppworker.hpp
7.MDF-Majordomo Protocol/: CMakeLists.txt  config.json  constant.hpp  run.bat
7.MDF-Majordomo Protocol/broker/: main.cpp  mdbroker.cpp  mdbroker.hpp
7.MDF-Majordomo Protocol/client/: main.cpp  mdcliapi.cpp  mdcliapi.hpp
7.MDF-Majordomo Protocol/worker/: echoworker.cpp  echoworker.hpp  main.cpp  mdworker.cpp  mdworker.hpp  mdworker_factory.cpp  mdworker_factory.hpp  mdwrkapi.cpp  mdwrkapi.hpp
9.TSP-Titanic Service Protocol/: CMakeLists.txt
9.TSP-Titanic Service Protocol/client/: main.cpp  ticlient.cpp  ticlient.hpp
9.TSP-Titanic Service Protocol/titanic/: close_worker.cpp  close_worker.hpp  main.cpp  reply_worker.cpp  reply_worker.hpp  request_worker.cpp  request_worker.hpp  titanic.cpp  titanic.hpp
BSP-Binary Star Pattern/: CMakeLists.txt  bsp_constant.hpp  config.json
BSP-Binary Star Pattern/client/: bstarcli.cpp  bstarcli.hpp  main.cpp
BSP-Binary Star Pattern/server1/: binary_star_server1.cpp  binary_star_server1.hpp  main.cpp
BSP-Binary Star Pattern/server2/: bstar.cpp  bstar.hpp  main.cpp
admin/: CMakeLists.txt  main.cpp  pub_admin.cpp  pub_admin.hpp  sub_admin.cpp  sub_admin.hpp
interface/: iworker.cpp  iworker.hpp  iworker_factory.hpp
logger/: logger.cpp  logger.hpp  logger_define.hpp
utils/: config_parser.cpp  config_parser.hpp  zmqutil.cpp  zmqutil.hpp
